# ProgramC

./: .gitignore  .golf.swp  LICENSE  README.md  alugueldecarro.py  ambrosioeadiferenca.cpp  checkPrime.c  criticallinks.cpp  dfsimprimindoasfolhas.cpp  eulerianPathCounter.py  exponentialFit.py  generator.py  graph.cpp  graphTest.cpp  in  in.in  judge.py  linearFit.py  listaordenada.cpp  lol.c  matriz.c  miau.c  miau.cpp  miau.py  out  out.java  potenciasde2.cpp  pythonArguments.py  stats.py  subprocess.py  t  test  test-NELSON-AMD.c  test.c  test.cpp  test.py  testingSieve  tree.py
Algorithms and Data Structures/: README.md
CSAcademy/: test
CodCad/: in  test
CodeForces/: 1003DCoinsAndQueries.cpp  1006DTwoStringsSwaps.cpp  1006FXorPaths.cpp  1011EBorder.cpp  115AParty.cpp  166CMedian.cpp  1ATheatreSquare.cpp  300CBeautifulNumbers.cpp  337APuzzles.cpp  349BColorTheFence.cpp  388AFoxAndBoxAccumulation.cpp  414BMashmokhAndACM.cpp  446ADZYLovesSequences.cpp  455ABoredom.cpp  466NumberOfWays.cpp  816D.c  (+29 more)
P2/Huffman-master/huffman/: CMakeLists.txt  LICENSE  README.md  binaryOperations.c  binaryOperations.h  compressFile.c  compressFile.h  decompressFile.c  decompressFile.h  huffTree.c  huffTree.h  list.c  list.h  main  main.c  progressBar.c  progressBar.h
P2/Huffman-master/huffman/Algorithms/: comp  compareTwoFiles.c  compressFile.c  esp  especialChar.c  frequency.c  head  headOut  headerSetBits.c  int  intTest.c  tes  test  testTheFile.c  testeDeCasoEspecial.c  testeDeLeitura.c  tested  textoOut.txt
P2/Huffman-master/huffman/Compressed to Test/: compressed.png.huff
(+3538 files in other folders)
